2_terraform_aws_ec2_example/route_table_association.tf
// Public Route Table Asscociation
resource "aws_route_table_association" "public" {
    subnet_id = "${aws_subnet.public.id}"
    route_table_id = "${aws_route_table.public.id}"
}
